updated recipe prompt and increased accuracy

--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:13:47.236513Z",
-     "start_time": "2025-11-21T22:13:47.223942Z"
+     "end_time": "2025-11-22T01:51:52.674929Z",
+     "start_time": "2025-11-22T01:51:52.099697Z"
     }
    },
    "source": [
@@ -36,26 +36,26 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:13:47.806877Z",
-     "start_time": "2025-11-21T22:13:47.241143Z"
+     "end_time": "2025-11-22T01:51:53.186287Z",
+     "start_time": "2025-11-22T01:51:52.678703Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:13:47.815935Z",
-     "start_time": "2025-11-21T22:13:47.812942Z"
+     "end_time": "2025-11-22T01:51:53.199294Z",
+     "start_time": "2025-11-22T01:51:53.192231Z"
     }
    },
    "cell_type": "code",
@@ -126,18 +126,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:19:01.309611Z",
-     "start_time": "2025-11-21T22:13:47.838385Z"
+     "end_time": "2025-11-22T01:52:56.594061Z",
+     "start_time": "2025-11-22T01:51:53.223411Z"
     }
    },
    "cell_type": "code",
@@ -173,26 +173,26 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:19:01.363095Z",
-     "start_time": "2025-11-21T22:19:01.355812Z"
+     "end_time": "2025-11-22T01:52:56.716814Z",
+     "start_time": "2025-11-22T01:52:56.671226Z"
     }
    },
    "cell_type": "code",
    "source": "final_df = assemble_branded_food_experimental_df()",
    "id": "4cd2360f0d7a4607",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:19:01.369032Z",
-     "start_time": "2025-11-21T22:19:01.366878Z"
+     "end_time": "2025-11-22T01:52:56.722827Z",
+     "start_time": "2025-11-22T01:52:56.720547Z"
     }
    },
    "cell_type": "code",
@@ -205,18 +205,18 @@
        "1000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:19:01.379521Z",
-     "start_time": "2025-11-21T22:19:01.377053Z"
+     "end_time": "2025-11-22T01:52:56.730680Z",
+     "start_time": "2025-11-22T01:52:56.728181Z"
     }
    },
    "cell_type": "code",
@@ -230,13 +230,13 @@
    ],
    "id": "9d1d7f53f01db112",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:22:22.441567Z",
-     "start_time": "2025-11-21T22:22:22.436500Z"
+     "end_time": "2025-11-22T01:52:56.738624Z",
+     "start_time": "2025-11-22T01:52:56.735102Z"
     }
    },
    "cell_type": "code",
@@ -247,9 +247,9 @@
      "data": {
       "text/plain": [
        "   fdc_id                                        description mapped_ingredient\n",
-       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...         \"biscuit\"\n",
-       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...  \"cinnamon rolls\"\n",
-       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...    \"bread crumbs\"\n",
+       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...     \"biscuit mix\"\n",
+       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...   \"cinnamon roll\"\n",
+       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...      \"breadcrumb\"\n",
        "3  167515     George Weston Bakeries, Thomas English Muffins  \"english muffin\"\n",
        "4  167516         Waffles, buttermilk, frozen, ready-to-heat      \"buttermilk\""
       ],
@@ -282,19 +282,19 @@
        "      <th>0</th>\n",
        "      <td>167512</td>\n",
        "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
-       "      <td>\"biscuit\"</td>\n",
+       "      <td>\"biscuit mix\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
        "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
-       "      <td>\"cinnamon rolls\"</td>\n",
+       "      <td>\"cinnamon roll\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
        "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
-       "      <td>\"bread crumbs\"</td>\n",
+       "      <td>\"breadcrumb\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -313,18 +313,18 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:20:26.631640Z",
-     "start_time": "2025-11-21T22:20:26.625017Z"
+     "end_time": "2025-11-22T01:52:56.863391Z",
+     "start_time": "2025-11-22T01:52:56.858761Z"
     }
    },
    "cell_type": "code",
@@ -335,13 +335,13 @@
    ],
    "id": "7fb705d14acb970e",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:19:01.443163Z",
-     "start_time": "2025-11-21T22:19:01.441846Z"
+     "end_time": "2025-11-22T01:52:56.899502Z",
+     "start_time": "2025-11-22T01:52:56.898284Z"
     }
    },
    "cell_type": "code",
