--- a/test_food_kg.ipynb
+++ b/test_food_kg.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.270294Z",
-     "start_time": "2025-11-21T19:56:26.889514Z"
+     "end_time": "2025-11-22T01:48:56.162679Z",
+     "start_time": "2025-11-22T01:48:55.920088Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.275726Z",
-     "start_time": "2025-11-21T19:56:27.274164Z"
+     "end_time": "2025-11-22T01:48:56.168571Z",
+     "start_time": "2025-11-22T01:48:56.166687Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.290729Z",
-     "start_time": "2025-11-21T19:56:27.280767Z"
+     "end_time": "2025-11-22T01:48:56.187725Z",
+     "start_time": "2025-11-22T01:48:56.173542Z"
     }
    },
    "cell_type": "code",
@@ -81,8 +81,8 @@
        "0  \"['brown sugar', 'evaporated milk', 'vanilla',...  \n",
        "1  \"['chipped beef', 'chicken breast', 'cream of ...  \n",
        "2  \"['corn', 'cream cheese', 'butter', 'garlic po...  \n",
-       "3  \"['chicken', 'chicken gravy', 'cream of mushro...  \n",
-       "4  \"['peanut butter', 'graham cracker', 'butter',...  "
+       "3  \"['chicken', 'chicken gravy', 'mushroom soup',...  \n",
+       "4  \"['peanut butter', 'graham cracker crumb', 'bu...  "
       ],
       "text/html": [
        "<div>\n",
@@ -141,7 +141,7 @@
        "      <td>\"['whole chicken', 'chicken gravy', 'cream of ...</td>\n",
        "      <td>Chicken Funny</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>\"['chicken', 'chicken gravy', 'cream of mushro...</td>\n",
+       "      <td>\"['chicken', 'chicken gravy', 'mushroom soup',...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -149,7 +149,7 @@
        "      <td>\"['peanut butter', 'graham cracker', 'butter',...</td>\n",
        "      <td>Reeses Cups(Candy)</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>\"['peanut butter', 'graham cracker', 'butter',...</td>\n",
+       "      <td>\"['peanut butter', 'graham cracker crumb', 'bu...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -166,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.386467Z",
-     "start_time": "2025-11-21T19:56:27.379919Z"
+     "end_time": "2025-11-22T01:48:56.220086Z",
+     "start_time": "2025-11-22T01:48:56.213044Z"
     }
    },
    "cell_type": "code",
@@ -196,18 +196,18 @@
        "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                                          output_set  \\\n",
-       "0  {evaporated milk, shredded rice biscuit, vanil...   \n",
-       "1  {cream of mushroom soup, chicken breast, sour ...   \n",
-       "2  {pepper, corn, cream cheese, butter, salt, gar...   \n",
-       "3  {cream of mushroom soup, chicken gravy, stuffi...   \n",
-       "4  {powdered sugar, chocolate chip, peanut butter...   \n",
+       "0  {evaporated milk, butter, shredded rice biscui...   \n",
+       "1  {chicken breast, cream of mushroom soup, chipp...   \n",
+       "2  {garlic powder, butter, salt, cream cheese, co...   \n",
+       "3  {stuffing, cheese, mushroom soup, chicken, chi...   \n",
+       "4  {butter, peanut butter, chocolate chip, powder...   \n",
        "\n",
        "                                            test_set  \n",
-       "0  {evaporated milk, margarine, vanilla, brown su...  \n",
-       "1  {cream of mushroom soup, chicken breast, sour ...  \n",
-       "2  {black pepper, corn, cream cheese, butter, sal...  \n",
-       "3  {cream of mushroom soup, chicken gravy, stuffi...  \n",
-       "4  {powdered sugar, chocolate chip, peanut butter...  "
+       "0  {evaporated milk, butter, margarine, vanilla, ...  \n",
+       "1  {chicken breast, cream of mushroom soup, chipp...  \n",
+       "2  {garlic powder, butter, black pepper, salt, cr...  \n",
+       "3  {stuffing, cheese, cream of mushroom soup, chi...  \n",
+       "4  {butter, peanut butter, graham cracker, chocol...  "
       ],
       "text/html": [
        "<div>\n",
@@ -239,36 +239,36 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{evaporated milk, shredded rice biscuit, vanil...</td>\n",
-       "      <td>{evaporated milk, margarine, vanilla, brown su...</td>\n",
+       "      <td>{evaporated milk, butter, shredded rice biscui...</td>\n",
+       "      <td>{evaporated milk, butter, margarine, vanilla, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{cream of mushroom soup, chicken breast, sour ...</td>\n",
-       "      <td>{cream of mushroom soup, chicken breast, sour ...</td>\n",
+       "      <td>{chicken breast, cream of mushroom soup, chipp...</td>\n",
+       "      <td>{chicken breast, cream of mushroom soup, chipp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{pepper, corn, cream cheese, butter, salt, gar...</td>\n",
-       "      <td>{black pepper, corn, cream cheese, butter, sal...</td>\n",
+       "      <td>{garlic powder, butter, salt, cream cheese, co...</td>\n",
+       "      <td>{garlic powder, butter, black pepper, salt, cr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, stuffi...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, stuffi...</td>\n",
+       "      <td>{stuffing, cheese, mushroom soup, chicken, chi...</td>\n",
+       "      <td>{stuffing, cheese, cream of mushroom soup, chi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{powdered sugar, chocolate chip, peanut butter...</td>\n",
-       "      <td>{powdered sugar, chocolate chip, peanut butter...</td>\n",
+       "      <td>{butter, peanut butter, chocolate chip, powder...</td>\n",
+       "      <td>{butter, peanut butter, graham cracker, chocol...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -285,8 +285,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.450968Z",
-     "start_time": "2025-11-21T19:56:27.448621Z"
+     "end_time": "2025-11-22T01:48:56.297009Z",
+     "start_time": "2025-11-22T01:48:56.294442Z"
     }
    },
    "cell_type": "code",
@@ -326,8 +326,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.473890Z",
-     "start_time": "2025-11-21T19:56:27.462359Z"
+     "end_time": "2025-11-22T01:48:56.328955Z",
+     "start_time": "2025-11-22T01:48:56.316615Z"
     }
    },
    "cell_type": "code",
@@ -357,8 +357,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.484357Z",
-     "start_time": "2025-11-21T19:56:27.478863Z"
+     "end_time": "2025-11-22T01:48:56.339305Z",
+     "start_time": "2025-11-22T01:48:56.332500Z"
     }
    },
    "cell_type": "code",
@@ -376,32 +376,39 @@
        "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                                          output_set  \\\n",
-       "0  {evaporated milk, shredded rice biscuit, vanil...   \n",
-       "1  {cream of mushroom soup, chicken breast, sour ...   \n",
-       "2  {pepper, corn, cream cheese, butter, salt, gar...   \n",
-       "3  {cream of mushroom soup, chicken gravy, stuffi...   \n",
-       "4  {powdered sugar, chocolate chip, peanut butter...   \n",
+       "0  {evaporated milk, butter, shredded rice biscui...   \n",
+       "1  {chicken breast, cream of mushroom soup, chipp...   \n",
+       "2  {garlic powder, butter, salt, cream cheese, co...   \n",
+       "3  {stuffing, cheese, mushroom soup, chicken, chi...   \n",
+       "4  {butter, peanut butter, chocolate chip, powder...   \n",
        "\n",
-       "                                            test_set                pred_only  \\\n",
-       "0  {evaporated milk, margarine, vanilla, brown su...  {shredded rice biscuit}   \n",
-       "1  {cream of mushroom soup, chicken breast, sour ...                       {}   \n",
-       "2  {black pepper, corn, cream cheese, butter, sal...                 {pepper}   \n",
-       "3  {cream of mushroom soup, chicken gravy, stuffi...                {chicken}   \n",
-       "4  {powdered sugar, chocolate chip, peanut butter...                       {}   \n",
+       "                                            test_set  \\\n",
+       "0  {evaporated milk, butter, margarine, vanilla, ...   \n",
+       "1  {chicken breast, cream of mushroom soup, chipp...   \n",
+       "2  {garlic powder, butter, black pepper, salt, cr...   \n",
+       "3  {stuffing, cheese, cream of mushroom soup, chi...   \n",
+       "4  {butter, peanut butter, graham cracker, chocol...   \n",
        "\n",
-       "                   true_only  intersection_size  union_size   overlap  \\\n",
-       "0  {margarine, rice biscuit}                  5           8  0.714286   \n",
-       "1                         {}                  4           4  1.000000   \n",
-       "2             {black pepper}                  5           7  0.833333   \n",
-       "3            {whole chicken}                  4           6  0.800000   \n",
-       "4                         {}                  5           5  1.000000   \n",
+       "                  pred_only                                true_only  \\\n",
+       "0   {shredded rice biscuit}                {margarine, rice biscuit}   \n",
+       "1                        {}                                       {}   \n",
+       "2                  {pepper}                           {black pepper}   \n",
+       "3  {mushroom soup, chicken}  {cream of mushroom soup, whole chicken}   \n",
+       "4    {graham cracker crumb}                         {graham cracker}   \n",
        "\n",
-       "    jaccard  precision    recall        f1  \n",
-       "0  0.625000   0.833333  0.714286  0.769231  \n",
-       "1  1.000000   1.000000  1.000000  1.000000  \n",
-       "2  0.714286   0.833333  0.833333  0.833333  \n",
-       "3  0.666667   0.800000  0.800000  0.800000  \n",
-       "4  1.000000   1.000000  1.000000  1.000000  "
+       "   intersection_size  union_size   overlap   jaccard  precision    recall  \\\n",
+       "0                  5           8  0.714286  0.625000   0.833333  0.714286   \n",
+       "1                  4           4  1.000000  1.000000   1.000000  1.000000   \n",
+       "2                  5           7  0.833333  0.714286   0.833333  0.833333   \n",
+       "3                  3           7  0.600000  0.428571   0.600000  0.600000   \n",
+       "4                  4           6  0.800000  0.666667   0.800000  0.800000   \n",
+       "\n",
+       "         f1  \n",
+       "0  0.769231  \n",
+       "1  1.000000  \n",
+       "2  0.833333  \n",
+       "3  0.600000  \n",
+       "4  0.800000  "
       ],
       "text/html": [
        "<div>\n",
@@ -442,8 +449,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{evaporated milk, shredded rice biscuit, vanil...</td>\n",
-       "      <td>{evaporated milk, margarine, vanilla, brown su...</td>\n",
+       "      <td>{evaporated milk, butter, shredded rice biscui...</td>\n",
+       "      <td>{evaporated milk, butter, margarine, vanilla, ...</td>\n",
        "      <td>{shredded rice biscuit}</td>\n",
        "      <td>{margarine, rice biscuit}</td>\n",
        "      <td>5</td>\n",
@@ -458,8 +465,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{cream of mushroom soup, chicken breast, sour ...</td>\n",
-       "      <td>{cream of mushroom soup, chicken breast, sour ...</td>\n",
+       "      <td>{chicken breast, cream of mushroom soup, chipp...</td>\n",
+       "      <td>{chicken breast, cream of mushroom soup, chipp...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>4</td>\n",
@@ -474,8 +481,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{pepper, corn, cream cheese, butter, salt, gar...</td>\n",
-       "      <td>{black pepper, corn, cream cheese, butter, sal...</td>\n",
+       "      <td>{garlic powder, butter, salt, cream cheese, co...</td>\n",
+       "      <td>{garlic powder, butter, black pepper, salt, cr...</td>\n",
        "      <td>{pepper}</td>\n",
        "      <td>{black pepper}</td>\n",
        "      <td>5</td>\n",
@@ -490,10 +497,26 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, stuffi...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, stuffi...</td>\n",
-       "      <td>{chicken}</td>\n",
-       "      <td>{whole chicken}</td>\n",
+       "      <td>{stuffing, cheese, mushroom soup, chicken, chi...</td>\n",
+       "      <td>{stuffing, cheese, cream of mushroom soup, chi...</td>\n",
+       "      <td>{mushroom soup, chicken}</td>\n",
+       "      <td>{cream of mushroom soup, whole chicken}</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
+       "      <td>{butter, peanut butter, chocolate chip, powder...</td>\n",
+       "      <td>{butter, peanut butter, graham cracker, chocol...</td>\n",
+       "      <td>{graham cracker crumb}</td>\n",
+       "      <td>{graham cracker}</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>0.800000</td>\n",
@@ -501,22 +524,6 @@
        "      <td>0.800000</td>\n",
        "      <td>0.800000</td>\n",
        "      <td>0.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{powdered sugar, chocolate chip, peanut butter...</td>\n",
-       "      <td>{powdered sugar, chocolate chip, peanut butter...</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -533,8 +540,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.507734Z",
-     "start_time": "2025-11-21T19:56:27.505544Z"
+     "end_time": "2025-11-22T01:48:56.623693Z",
+     "start_time": "2025-11-22T01:48:56.621220Z"
     }
    },
    "cell_type": "code",
@@ -551,11 +558,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overlap:  0.8361\n",
-      "Jaccard:   0.7603\n",
-      "Precision: 0.8454\n",
-      "Recall:    0.8370\n",
-      "F1:        0.8408\n"
+      "Overlap:  0.8744\n",
+      "Jaccard:   0.8104\n",
+      "Precision: 0.8834\n",
+      "Recall:    0.8756\n",
+      "F1:        0.8791\n"
      ]
     }
    ],
@@ -564,8 +571,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:56:27.552004Z",
-     "start_time": "2025-11-21T19:56:27.550559Z"
+     "end_time": "2025-11-22T01:48:56.640724Z",
+     "start_time": "2025-11-22T01:48:56.639465Z"
     }
    },
    "cell_type": "code",
