--- a/test_products.ipynb
+++ b/test_products.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.534758Z",
-     "start_time": "2025-11-21T22:23:45.130960Z"
+     "end_time": "2025-11-22T01:57:46.863645Z",
+     "start_time": "2025-11-22T01:57:46.622470Z"
     }
    },
    "source": "import pandas as pd",
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.540035Z",
-     "start_time": "2025-11-21T22:23:45.538518Z"
+     "end_time": "2025-11-22T01:57:46.869650Z",
+     "start_time": "2025-11-22T01:57:46.867037Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.551692Z",
-     "start_time": "2025-11-21T22:23:45.543648Z"
+     "end_time": "2025-11-22T01:57:46.894072Z",
+     "start_time": "2025-11-22T01:57:46.873795Z"
     }
    },
    "cell_type": "code",
@@ -68,9 +68,9 @@
        "4  167516      buttermilk waffle   \n",
        "\n",
        "                                         description mapped_ingredient  \n",
-       "0  Pillsbury Golden Layer Buttermilk Biscuits, Ar...         \"biscuit\"  \n",
-       "1  Pillsbury, Cinnamon Rolls with Icing, refriger...  \"cinnamon rolls\"  \n",
-       "2  Kraft Foods, Shake N Bake Original Recipe, Coa...    \"bread crumbs\"  \n",
+       "0  Pillsbury Golden Layer Buttermilk Biscuits, Ar...     \"biscuit mix\"  \n",
+       "1  Pillsbury, Cinnamon Rolls with Icing, refriger...   \"cinnamon roll\"  \n",
+       "2  Kraft Foods, Shake N Bake Original Recipe, Coa...      \"breadcrumb\"  \n",
        "3     George Weston Bakeries, Thomas English Muffins  \"english muffin\"  \n",
        "4         Waffles, buttermilk, frozen, ready-to-heat      \"buttermilk\"  "
       ],
@@ -105,21 +105,21 @@
        "      <td>167512</td>\n",
        "      <td>buttermilk biscuit</td>\n",
        "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
-       "      <td>\"biscuit\"</td>\n",
+       "      <td>\"biscuit mix\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
        "      <td>cinnamon roll</td>\n",
        "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
-       "      <td>\"cinnamon rolls\"</td>\n",
+       "      <td>\"cinnamon roll\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
        "      <td>bread crumb</td>\n",
        "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
-       "      <td>\"bread crumbs\"</td>\n",
+       "      <td>\"breadcrumb\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -150,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.643325Z",
-     "start_time": "2025-11-21T22:23:45.637317Z"
+     "end_time": "2025-11-22T01:57:46.922630Z",
+     "start_time": "2025-11-22T01:57:46.916599Z"
     }
    },
    "cell_type": "code",
@@ -173,15 +173,15 @@
      "data": {
       "text/plain": [
        "     fdc_id       description          pred_set              test_set\n",
-       "0    167512         \"biscuit\"         {biscuit}  {buttermilk biscuit}\n",
-       "1    167513  \"cinnamon rolls\"  {cinnamon rolls}       {cinnamon roll}\n",
-       "2    167514    \"bread crumbs\"    {bread crumbs}         {bread crumb}\n",
+       "0    167512     \"biscuit mix\"     {biscuit mix}  {buttermilk biscuit}\n",
+       "1    167513   \"cinnamon roll\"   {cinnamon roll}       {cinnamon roll}\n",
+       "2    167514      \"breadcrumb\"      {breadcrumb}         {bread crumb}\n",
        "3    167515  \"english muffin\"  {english muffin}      {english muffin}\n",
        "4    167516      \"buttermilk\"      {buttermilk}   {buttermilk waffle}\n",
        "..      ...               ...               ...                   ...\n",
        "295  167807    \"cherry juice\"    {cherry juice}        {cherry juice}\n",
        "296  167808       \"raspberry\"       {raspberry}     {raspberry puree}\n",
-       "297  167809     \"raspberries\"     {raspberries}     {raspberry puree}\n",
+       "297  167809       \"raspberry\"       {raspberry}     {raspberry puree}\n",
        "298  167810            \"pork\"            {pork}                {pork}\n",
        "299  167811            \"pork\"            {pork}                {pork}\n",
        "\n",
@@ -216,22 +216,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>167512</td>\n",
-       "      <td>\"biscuit\"</td>\n",
-       "      <td>{biscuit}</td>\n",
+       "      <td>\"biscuit mix\"</td>\n",
+       "      <td>{biscuit mix}</td>\n",
        "      <td>{buttermilk biscuit}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
-       "      <td>\"cinnamon rolls\"</td>\n",
-       "      <td>{cinnamon rolls}</td>\n",
+       "      <td>\"cinnamon roll\"</td>\n",
+       "      <td>{cinnamon roll}</td>\n",
        "      <td>{cinnamon roll}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
-       "      <td>\"bread crumbs\"</td>\n",
-       "      <td>{bread crumbs}</td>\n",
+       "      <td>\"breadcrumb\"</td>\n",
+       "      <td>{breadcrumb}</td>\n",
        "      <td>{bread crumb}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -272,8 +272,8 @@
        "    <tr>\n",
        "      <th>297</th>\n",
        "      <td>167809</td>\n",
-       "      <td>\"raspberries\"</td>\n",
-       "      <td>{raspberries}</td>\n",
+       "      <td>\"raspberry\"</td>\n",
+       "      <td>{raspberry}</td>\n",
        "      <td>{raspberry puree}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -306,8 +306,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.704537Z",
-     "start_time": "2025-11-21T22:23:45.702216Z"
+     "end_time": "2025-11-22T01:57:47.010716Z",
+     "start_time": "2025-11-22T01:57:47.007892Z"
     }
    },
    "cell_type": "code",
@@ -347,8 +347,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.735350Z",
-     "start_time": "2025-11-21T22:23:45.713837Z"
+     "end_time": "2025-11-22T01:57:47.079629Z",
+     "start_time": "2025-11-22T01:57:47.034324Z"
     }
    },
    "cell_type": "code",
@@ -375,8 +375,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.779806Z",
-     "start_time": "2025-11-21T22:23:45.772569Z"
+     "end_time": "2025-11-22T01:57:47.118696Z",
+     "start_time": "2025-11-22T01:57:47.110826Z"
     }
    },
    "cell_type": "code",
@@ -387,27 +387,27 @@
      "data": {
       "text/plain": [
        "    fdc_id          description             pred_set              test_set  \\\n",
-       "0   167512            \"biscuit\"            {biscuit}  {buttermilk biscuit}   \n",
-       "1   167513     \"cinnamon rolls\"     {cinnamon rolls}       {cinnamon roll}   \n",
-       "2   167514       \"bread crumbs\"       {bread crumbs}         {bread crumb}   \n",
+       "0   167512        \"biscuit mix\"        {biscuit mix}  {buttermilk biscuit}   \n",
+       "1   167513      \"cinnamon roll\"      {cinnamon roll}       {cinnamon roll}   \n",
+       "2   167514         \"breadcrumb\"         {breadcrumb}         {bread crumb}   \n",
        "3   167515     \"english muffin\"     {english muffin}      {english muffin}   \n",
        "4   167516         \"buttermilk\"         {buttermilk}   {buttermilk waffle}   \n",
        "..     ...                  ...                  ...                   ...   \n",
        "95  167607           \"raw meat\"           {raw meat}               {moose}   \n",
-       "96  167608        \"mashu roots\"        {mashu roots}          {mashu root}   \n",
+       "96  167608         \"mashu root\"         {mashu root}          {mashu root}   \n",
        "97  167609              \"liver\"              {liver}         {moose liver}   \n",
        "98  167610  \"bearded seal meat\"  {bearded seal meat}                {seal}   \n",
-       "99  167611       \"bearded seal\"       {bearded seal}            {seal oil}   \n",
+       "99  167611   \"bearded seal oil\"   {bearded seal oil}            {seal oil}   \n",
        "\n",
        "    intersection_size  union_size  overlap  jaccard  precision  recall   f1  \n",
        "0                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
-       "1                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "1                   1           1      1.0      1.0        1.0     1.0  1.0  \n",
        "2                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
        "3                   1           1      1.0      1.0        1.0     1.0  1.0  \n",
        "4                   0           2      0.0      0.0        0.0     0.0  0.0  \n",
        "..                ...         ...      ...      ...        ...     ...  ...  \n",
        "95                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
-       "96                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
+       "96                  1           1      1.0      1.0        1.0     1.0  1.0  \n",
        "97                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
        "98                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
        "99                  0           2      0.0      0.0        0.0     0.0  0.0  \n",
@@ -450,8 +450,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>167512</td>\n",
-       "      <td>\"biscuit\"</td>\n",
-       "      <td>{biscuit}</td>\n",
+       "      <td>\"biscuit mix\"</td>\n",
+       "      <td>{biscuit mix}</td>\n",
        "      <td>{buttermilk biscuit}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -464,22 +464,22 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
-       "      <td>\"cinnamon rolls\"</td>\n",
-       "      <td>{cinnamon rolls}</td>\n",
+       "      <td>\"cinnamon roll\"</td>\n",
        "      <td>{cinnamon roll}</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{cinnamon roll}</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
-       "      <td>\"bread crumbs\"</td>\n",
-       "      <td>{bread crumbs}</td>\n",
+       "      <td>\"breadcrumb\"</td>\n",
+       "      <td>{breadcrumb}</td>\n",
        "      <td>{bread crumb}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -548,16 +548,16 @@
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>167608</td>\n",
-       "      <td>\"mashu roots\"</td>\n",
-       "      <td>{mashu roots}</td>\n",
+       "      <td>\"mashu root\"</td>\n",
        "      <td>{mashu root}</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{mashu root}</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
@@ -590,8 +590,8 @@
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>167611</td>\n",
-       "      <td>\"bearded seal\"</td>\n",
-       "      <td>{bearded seal}</td>\n",
+       "      <td>\"bearded seal oil\"</td>\n",
+       "      <td>{bearded seal oil}</td>\n",
        "      <td>{seal oil}</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -617,8 +617,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.834451Z",
-     "start_time": "2025-11-21T22:23:45.832185Z"
+     "end_time": "2025-11-22T01:57:47.476252Z",
+     "start_time": "2025-11-22T01:57:47.473720Z"
     }
    },
    "cell_type": "code",
@@ -635,11 +635,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overlap:  0.4500\n",
-      "Jaccard:   0.4500\n",
-      "Precision: 0.4500\n",
-      "Recall:    0.4500\n",
-      "F1:        0.4500\n"
+      "Overlap:  0.4633\n",
+      "Jaccard:   0.4633\n",
+      "Precision: 0.4633\n",
+      "Recall:    0.4633\n",
+      "F1:        0.4633\n"
      ]
     }
    ],
@@ -648,8 +648,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.848460Z",
-     "start_time": "2025-11-21T22:23:45.846458Z"
+     "end_time": "2025-11-22T01:57:47.494126Z",
+     "start_time": "2025-11-22T01:57:47.492012Z"
     }
    },
    "cell_type": "code",
@@ -672,8 +672,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T22:23:45.882812Z",
-     "start_time": "2025-11-21T22:23:45.881486Z"
+     "end_time": "2025-11-22T01:57:47.506128Z",
+     "start_time": "2025-11-22T01:57:47.504453Z"
     }
    },
    "cell_type": "code",
