--- a/unique_ingredients.ipynb
+++ b/unique_ingredients.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:46:31.542151Z",
-     "start_time": "2025-11-21T20:46:31.132022Z"
+     "end_time": "2025-11-22T01:50:57.609011Z",
+     "start_time": "2025-11-22T01:50:57.392323Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:46:31.563594Z",
-     "start_time": "2025-11-21T20:46:31.546969Z"
+     "end_time": "2025-11-22T01:50:57.631233Z",
+     "start_time": "2025-11-22T01:50:57.612222Z"
     }
    },
    "cell_type": "code",
@@ -44,8 +44,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:46:31.571478Z",
-     "start_time": "2025-11-21T20:46:31.568Z"
+     "end_time": "2025-11-22T01:50:57.638695Z",
+     "start_time": "2025-11-22T01:50:57.634639Z"
     }
    },
    "cell_type": "code",
@@ -58,8 +58,8 @@
        "0    [brown sugar, evaporated milk, vanilla, pecan,...\n",
        "1    [chipped beef, chicken breast, cream of mushro...\n",
        "2    [corn, cream cheese, butter, garlic powder, sa...\n",
-       "3    [chicken, chicken gravy, cream of mushroom sou...\n",
-       "4    [peanut butter, graham cracker, butter, powder...\n",
+       "3    [chicken, chicken gravy, mushroom soup, stuffi...\n",
+       "4    [peanut butter, graham cracker crumb, butter, ...\n",
        "Name: ingredients_list, dtype: object"
       ]
      },
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:49:41.644545Z",
-     "start_time": "2025-11-21T20:49:41.640225Z"
+     "end_time": "2025-11-22T01:50:57.666528Z",
+     "start_time": "2025-11-22T01:50:57.664148Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +88,13 @@
    ],
    "id": "79030791909443d6",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:49:41.946570Z",
-     "start_time": "2025-11-21T20:49:41.942305Z"
+     "end_time": "2025-11-22T01:50:57.696854Z",
+     "start_time": "2025-11-22T01:50:57.694208Z"
     }
    },
    "cell_type": "code",
@@ -111,17 +111,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 1050 unique ingredients to unique_ingredients.txt\n"
+      "Saved 1037 unique ingredients to unique_ingredients.txt\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T20:46:31.756556Z",
-     "start_time": "2025-11-21T20:43:04.767909Z"
+     "end_time": "2025-11-22T01:50:57.726741Z",
+     "start_time": "2025-11-22T01:50:57.725469Z"
     }
    },
    "cell_type": "code",
