--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:21:48.268887Z",
-     "start_time": "2025-11-21T19:21:48.030039Z"
+     "end_time": "2025-11-22T01:44:42.460842Z",
+     "start_time": "2025-11-22T01:44:41.487945Z"
     }
    },
    "cell_type": "code",
@@ -40,21 +40,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:22:35.855638Z",
-     "start_time": "2025-11-21T19:22:20.720425Z"
+     "end_time": "2025-11-22T01:44:55.160011Z",
+     "start_time": "2025-11-22T01:44:42.469334Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/nourish_public_FoodKG.csv\")",
    "id": "37d2896b9a396a23",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:22:37.888343Z",
-     "start_time": "2025-11-21T19:22:37.867140Z"
+     "end_time": "2025-11-22T01:44:55.385706Z",
+     "start_time": "2025-11-22T01:44:55.379790Z"
     }
    },
    "cell_type": "code",
@@ -183,18 +183,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:32:58.398322Z",
-     "start_time": "2025-11-21T19:22:44.488356Z"
+     "end_time": "2025-11-22T01:48:12.707958Z",
+     "start_time": "2025-11-22T01:44:55.435642Z"
     }
    },
    "cell_type": "code",
@@ -231,26 +231,26 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:34:52.417957Z",
-     "start_time": "2025-11-21T19:34:52.395544Z"
+     "end_time": "2025-11-22T01:48:12.825096Z",
+     "start_time": "2025-11-22T01:48:12.808147Z"
     }
    },
    "cell_type": "code",
    "source": "final_df = assemble_food_kg_df()",
    "id": "2180e8350bbc873",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:34:53.553736Z",
-     "start_time": "2025-11-21T19:34:53.537444Z"
+     "end_time": "2025-11-22T01:48:12.833103Z",
+     "start_time": "2025-11-22T01:48:12.830254Z"
     }
    },
    "cell_type": "code",
@@ -263,18 +263,18 @@
        "1000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:34:57.453357Z",
-     "start_time": "2025-11-21T19:34:57.436080Z"
+     "end_time": "2025-11-22T01:48:12.848414Z",
+     "start_time": "2025-11-22T01:48:12.845030Z"
     }
    },
    "cell_type": "code",
@@ -290,13 +290,13 @@
    ],
    "id": "32402a8e1820fcca",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:35:21.610875Z",
-     "start_time": "2025-11-21T19:35:21.589818Z"
+     "end_time": "2025-11-22T01:48:12.866319Z",
+     "start_time": "2025-11-22T01:48:12.861894Z"
     }
    },
    "cell_type": "code",
@@ -324,8 +324,8 @@
        "0  \"['brown sugar', 'evaporated milk', 'vanilla',...  \n",
        "1  \"['chipped beef', 'chicken breast', 'cream of ...  \n",
        "2  \"['corn', 'cream cheese', 'butter', 'garlic po...  \n",
-       "3  \"['chicken', 'chicken gravy', 'cream of mushro...  \n",
-       "4  \"['peanut butter', 'graham cracker', 'butter',...  "
+       "3  \"['chicken', 'chicken gravy', 'mushroom soup',...  \n",
+       "4  \"['peanut butter', 'graham cracker crumb', 'bu...  "
       ],
       "text/html": [
        "<div>\n",
@@ -379,32 +379,32 @@
        "      <td>3</td>\n",
        "      <td>Chicken Funny</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>\"['chicken', 'chicken gravy', 'cream of mushro...</td>\n",
+       "      <td>\"['chicken', 'chicken gravy', 'mushroom soup',...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Reeses Cups(Candy)</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>\"['peanut butter', 'graham cracker', 'butter',...</td>\n",
+       "      <td>\"['peanut butter', 'graham cracker crumb', 'bu...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:36:07.803029Z",
-     "start_time": "2025-11-21T19:36:07.788595Z"
+     "end_time": "2025-11-22T01:48:12.899534Z",
+     "start_time": "2025-11-22T01:48:12.893684Z"
     }
    },
    "cell_type": "code",
@@ -414,13 +414,13 @@
    ],
    "id": "eb5333d7ca02f839",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T19:36:09.298217Z",
-     "start_time": "2025-11-21T19:36:09.283600Z"
+     "end_time": "2025-11-22T01:48:12.950345Z",
+     "start_time": "2025-11-22T01:48:12.946312Z"
     }
    },
    "cell_type": "code",
@@ -448,8 +448,8 @@
        "0  ['brown sugar', 'evaporated milk', 'vanilla', ...  \n",
        "1  ['chipped beef', 'chicken breast', 'cream of m...  \n",
        "2  ['corn', 'cream cheese', 'butter', 'garlic pow...  \n",
-       "3  ['chicken', 'chicken gravy', 'cream of mushroo...  \n",
-       "4  ['peanut butter', 'graham cracker', 'butter', ...  "
+       "3  ['chicken', 'chicken gravy', 'mushroom soup', ...  \n",
+       "4  ['peanut butter', 'graham cracker crumb', 'but...  "
       ],
       "text/html": [
        "<div>\n",
@@ -503,34 +503,39 @@
        "      <td>3</td>\n",
        "      <td>Chicken Funny</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>['chicken', 'chicken gravy', 'cream of mushroo...</td>\n",
+       "      <td>['chicken', 'chicken gravy', 'mushroom soup', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Reeses Cups(Candy)</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>['peanut butter', 'graham cracker', 'butter', ...</td>\n",
+       "      <td>['peanut butter', 'graham cracker crumb', 'but...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-22T01:48:13.184289Z",
+     "start_time": "2025-11-22T01:48:13.182155Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "156f23477302dc83"
+   "id": "156f23477302dc83",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
